<resources>
    <string name="app_name">Dadu</string>
    <string name="home">Inicio</string>
    <string name="store">Tienda</string>
    <string name="achievements">Logros</string>
    <string name="menu">Menu</string>
    <string name="hello">Hola</string>
    <string name="username">\@Username</string>
    <string name="email">username@email.com</string>
    <string name="number">0</string>
    <string name="play">Jugar</string>
    <!-- Navigation Drawer -->
    <string name="account_settings">Mi cuenta</string>
    <string name="settings">Configuración</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="navigation_drawer_open">Abrir navegación</string>
    <string name="navigation_drawer_close">Cerrar navegación</string>
    <!-- Login -->
    <string name="txtWelcome">Hola de nuevo!</string>
    <string name="txtMail">Correo electronico</string>
    <string name="txtPass">Contraseña</string>
    <string name="forgot_pass">Olvide mi contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="no_account">No tengo cuenta</string>
    <string name="txtCancel">Cancelar</string>
    <string name="txtCPass">Confirmar contraseña</string>
    <string name="txtName">Nombre de usuario</string>
    <string name="txtSignUp">Registrate</string>
    <string name="txtRegister">Crear cuenta</string>
    <string name="txtAge">Edad</string>
    <!-- Reset password -->
    <string name="reset_pass">Restablecer contraseña</string>
    <string name="instruction_email">Ingresa el correo electronico con el que te registraste y te enviaremos un código para restablecer tu contraseña.</string>
    <string name="have_a_code">Tengo un código</string>
    <string name="get_code">Obtener código</string>
    <string name="instruction_code">Ingresa el código que te enviamos al correo electronico que ingresaste.</string>
    <string name="code">Código</string>
    <string name="verify_code">Verificar codigo</string>
    <string name="change_pass">Cambiar contraseña</string>
    <string name="instruction_pass">Ingresa una nueva contraseña para tu cuenta.</string>
    <!-- My Account -->
    <string name="update_account">Actualizar perfil</string>
    <string name="edit_account">Editar perfil</string>
    <string name="change_avatar">Cambiar foto de perfil</string>
    <!-- Games -->
    <string name="choose_game">Elige un modo de juego</string>
    <string name="random">Aleatorio</string>
    <string name="mathematics">Matematicas</string>
    <string name="geography">Geografia</string>
    <string name="history">Historia</string>
    <string name="sports">Deportes</string>
    <string name="natural_sciences">Ciencias</string>
    <!-- Question -->
    <string name="subject">Materia</string>
    <string name="question_number">Pregunta 1</string>
    <string name="question">Si el tiempo es oro, ¿los relojes son máquinas de hacer dinero?</string>
    <string name="answer1">Respuesta 1</string>
    <string name="answer2">Respuesta 2</string>
    <string name="answer3">Respuesta 3</string>
    <string name="answer4">Respuesta 4</string>

    <string name="back"><![CDATA[< Volver]]></string>
</resources>