<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_15"
    tools:context=".GetCodeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp">

        <TextView
            android:id="@+id/lblWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/reset_pass"
            android:textAppearance="@style/Title" />

        <TextView
            android:id="@+id/lblInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblWelcome"
            android:layout_marginBottom="40dp"
            android:text="@string/instruction_email"
            android:justificationMode="inter_word"
            android:textAppearance="@style/Text" />

        <TextView
            android:id="@+id/lblMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblInstruction"
            android:layout_marginBottom="20dp"
            android:text="@string/txtMail"
            android:textAppearance="@style/Body" />

        <EditText
            android:id="@+id/txtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblMail"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/txtMail"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextEdit"
            android:textColor="@color/dark_charcoal" />

        <Button
            android:id="@+id/btnCode"
            style="@style/TextButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtMail"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_text_button"
            android:text="@string/have_a_code" />

        <Button
            android:id="@+id/btnRecovery"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnCode"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/get_code" />

        <Button
            android:id="@+id/btnCancelar"
            style="@style/TextButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnRecovery"
            android:background="@drawable/bg_text_button"
            android:text="@string/txtCancel" />

    </RelativeLayout>

</ScrollView>