<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_15"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp">

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textAppearance="@style/Title" />

        <TextView
            android:id="@+id/lblWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblTitle"
            android:layout_marginBottom="40dp"
            android:text="@string/txtWelcome"
            android:textAppearance="@style/SubTitle" />

        <TextView
            android:id="@+id/lblMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblWelcome"
            android:layout_marginBottom="20dp"
            android:text="@string/txtMail"
            android:textAppearance="@style/Body" />

        <EditText
            android:id="@+id/txtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblMail"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/txtMail"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextEdit"
            android:textColor="@color/dark_charcoal" />

        <TextView
            android:id="@+id/lblPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtMail"
            android:layout_marginBottom="20dp"
            android:text="@string/txtPass"
            android:textAppearance="@style/Body" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblPass"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/txtPass"
            android:inputType="textPassword"
            android:textAppearance="@style/TextEdit"
            android:textColor="@color/dark_charcoal" />

        <Button
            android:id="@+id/btnResetAccount"
            style="@style/LinkButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtPass"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_text_button"
            android:onClick="Recovery"
            android:text="@string/forgot_pass" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnResetAccount"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_button"
            android:onClick="Login"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnCreateAccount"
            style="@style/TextButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:background="@drawable/bg_text_button"
            android:onClick="Register"
            android:text="@string/no_account" />

    </RelativeLayout>

</ScrollView>