<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".ValidateCodeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/lblWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/reset_pass"
            android:textAppearance="@style/Title" />

        <TextView
            android:id="@+id/lblInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/instruction_code"
            android:justificationMode="inter_word"
            android:textAppearance="@style/Text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlCode"
            style="@style/TextAppearance.App.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/rubik_medium"
                android:maxLines="1"
                android:padding="25dp"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRecovery"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/verify_code" />

        <Button
            android:id="@+id/btnCancelar"
            style="@style/TextButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_text_button"
            android:text="@string/txtCancel" />

    </LinearLayout>

</ScrollView>