<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".NewPassFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/lblWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/change_pass"
            android:textAppearance="@style/Title" />

        <TextView
            android:id="@+id/lblInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/instruction_pass"
            android:justificationMode="inter_word"
            android:textAppearance="@style/Text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPass"
            style="@style/TextAppearance.App.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/txtPass"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/rubik_medium"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="25dp"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlCPass"
            style="@style/TextAppearance.App.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:hint="@string/txtCPass"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiCPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/rubik_medium"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="25dp"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnReset"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/change_pass" />

        <Button
            android:id="@+id/btnCancelar"
            style="@style/TextButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_text_button"
            android:text="@string/txtCancel" />

    </LinearLayout>

</ScrollView>