<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    tools:context=".MyAccount">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorBackground">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/arrow_small_left" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/account_settings"
                android:textAppearance="@style/Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="15dp"
                android:text="@string/edit_account"
                android:textAppearance="@style/Text" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="?attr/colorSurface"
                android:clickable="true"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:strokeColor="?attr/colorOutline"
                app:strokeWidth="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="15dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileImage"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/avatar"
                        android:onClick="selectImage"
                        app:civ_border_color="?attr/colorOutline"
                        app:civ_border_width="1dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/change_avatar"
                            android:textAppearance="@style/Text"
                            android:textColor="?attr/editTextColor" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlName"
                style="@style/TextAppearance.App.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp"

                android:hint="@string/txtName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/rubik_medium"
                    android:maxLines="1"

                    android:padding="25dp"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlMail"
                style="@style/TextAppearance.App.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp"

                android:hint="@string/txtMail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/rubik_medium"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="25dp"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlAge"
                style="@style/TextAppearance.App.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp"

                android:hint="@string/txtAge">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/rubik_medium"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="25dp"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="15dp"
                android:text="@string/change_pass"
                android:textAppearance="@style/Text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlPass"
                style="@style/TextAppearance.App.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp"

                android:hint="@string/txtPass"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/rubik_medium"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="25dp"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlCPass"
                style="@style/TextAppearance.App.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="40dp"

                android:hint="@string/txtCPass"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiCPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/rubik_medium"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="25dp"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnRegisterB"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_button"
                android:text="Editar" />
            <Button
                android:id="@+id/btnRegister"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_button"
                android:onClick="UpdateUser"
                android:visibility="gone"
                android:text="@string/update_account" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/TextButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="40dp"

                android:background="@drawable/bg_text_button"
                android:text="@string/txtCancel" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>